--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
     "from ucimlrepo import fetch_ucirepo \n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from normalizer import Normalizer\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -52,14 +52,17 @@
     "import decision_tree\n",
     "importlib.reload(decision_tree)  # Ricarica il modulo\n",
     "\n",
+    "def fix_label(y):\n",
+    "        y['class'] = y['class'].apply(lambda x: 1 if x == 'e' else 0)\n",
+    "        return y\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=88, shuffle=True)\n",
     "\n",
     "\n",
-    "normalizer = Normalizer(n_bins=4, normalization='minmax')\n",
+    "\n",
     "\n",
     "#X_train = normalizer.normalize(X_train)\n",
-    "y_train = normalizer._fix_label(y_train)\n",
+    "y_train = fix_label(y_train)\n",
     "\n",
     "\n",
     "#X = normalizer.normalize(X)\n",
@@ -75,7 +78,7 @@
     "\n",
     "#----------PREDICTION\n",
     "#X_test=normalizer.normalize(X_test)\n",
-    "y_test = normalizer._fix_label(y_test)\n",
+    "y_test = fix_label(y_test)\n",
     "prediction = dt.predict(X_test)\n",
     "\n",
     "\n",
