--- a/main.ipynb
+++ b/main.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +92,11 @@
     "print(f\"F1-score: {f1}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -433,7 +438,7 @@
     "param_grid = {\n",
     "    'max_depth': [20,25,30], \n",
     "    'min_samples_split': [10,20],\n",
-    "    'criterion' : ['gini', 'entropy', 'sqrt_split'],\n",
+    "    'criterion' : ['gini', 'entropy', 'std_dev'],\n",
     "    'min_impurity_decrease' : [0.001,0.005]\n",
     "}\n",
     "\n",
